Added bean lifecycle